Use standaloneMonthName in the Month View's header

Use `standaloneMonthName()` to generate the month name in the Month
View's header, as is done by KOrganizer's date navigator, because
`QString::toString()` produces inappropriate month names for Slavic
languages in this context.

BUG: 453292

Related: https://invent.kde.org/pim/calendarsupport/-/merge_requests/43